--- a/react_app/login/styles/login.css
+++ b/react_app/login/styles/login.css
@@ -9,7 +9,7 @@
     text-decoration: none;
 }
 
-/*.myapp-login { background: url(../i/index.jpg) rgb(20,22,45) top no-repeat; background-size: 100%; height: 100%;}*/
+/*.myapp-login { background: url(../i/bak.jpg) rgb(20,22,45) top no-repeat; background-size: 100%; height: 100%;}*/
 .myapp-login {
     height: 900px;
     width: 100%;
