--- a/react_app/book/styles/book.css
+++ b/react_app/book/styles/book.css
@@ -2,7 +2,7 @@
     width: 70%;
 }
 
-.flex {
+.flex_class {
     display: flex;
 }
 
@@ -33,4 +33,9 @@
     padding-left: 20px;
     padding-bottom: 20px;
     padding-right: 20px;
+}
+
+.add_book {
+    margin-top: 10px;
+    margin-right: 10px;
 }
