--- a/react_app/friends/styles/friends.css
+++ b/react_app/friends/styles/friends.css
@@ -19,9 +19,9 @@
     clear: both;
 }
 .card_rhs {
-// width: 350px;
+    width: 70%;
     margin: 10px;
-//    height: 300px;
+    height: 180px;
     float: left;
 }
 .tags {
@@ -30,14 +30,15 @@
 }
 
 
-.card_media_{
+
+.card_media2{
     width: 30px;
     height: 30px;
     margin: 10px;
     float: left;
 }
 
-.clearfix2::after {
+.clearfix2::after{
     content: " ";
     display: block;
     height: 0;
