--- a/react_app/friends/styles/friends.css
+++ b/react_app/friends/styles/friends.css
@@ -408,7 +408,7 @@ li {
     margin-bottom: 25px;
 }
 
-.tpl-content-wrapper {
+.tpl-content-wrapper-f {
     padding-left: 255px;
     padding-top: 0px;
 }
