--- a/react_app/personal/styles/personal.css
+++ b/react_app/personal/styles/personal.css
@@ -409,7 +409,7 @@ li {
     margin-bottom: 25px;
 }
 
-.tpl-content-wrapper {
+.tpl-content-wrapper-p {
     padding-left: 255px;
     padding-top: 0px;
 }
