--- a/react_app/mine/styles/mine.css
+++ b/react_app/mine/styles/mine.css
@@ -1,3 +1,504 @@
+.app-search .form-control, .app-search .form-control:focus {
+    border: 1px solid rgba(152, 166, 173, 0.15);
+    font-size: 13px;
+    height: 34px;
+    color: #435966;
+    font-weight: 600;
+    padding-left: 20px;
+    padding-right: 40px;
+    margin-left: 20px;
+    background: rgba(152, 166, 173, 0.2);
+    box-shadow: none;
+    border-radius: 30px;
+    width: 190px;
+}
+
+.am-with-topbar-fixed-top{
+    padding-top: 0;
+}
+
+.hidden-xs {
+    position: relative;
+}
+
+.am-navbar-right {
+    float: left !important;
+    /*margin-right: 200px;*/
+    margin-top: 10px;
+}
+
+.am-navbar-right li {
+    float: left;
+}
+
+.app-search a {
+    position: absolute;
+    display: block;
+    width: 19px;
+    height: 21px;
+    top: 3px;
+    right: 20px;
+    color: rgba(152, 166, 173, 0.7);
+}
+
+.tpl-header-list-link {
+    color: #999 !important;
+}
+
+.tpl-header-list-user-nick {
+    color: #7FB0DA;
+}
+
+.tpl-header-list li {
+    color: #999;
+    border-bottom: 1px solid #F1F4F7;
+}
+
+.dropbar {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    float: right;
+    margin-top: 10px;
+}
+
+.tpl-header-list-user-ico img {
+    margin-left: 5px;
+    margin-top: -4px;
+    height: 39px;
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.tpl-header-list li:hover {
+    background: #f9fafc;
+}
+
+/*
+.am-topbar-inverse .am-topbar-nav>li>a {
+    height: 75px;
+    line-height: 75px;
+    padding: 0 12px;
+}*/
+
+.tpl-badge-success {
+    background-color: #36c6d3 !important;
+}
+
+.tpl-badge-danger {
+    background-color: #ed6b75 !important;
+}
+
+.tpl-badge-warning {
+    background-color: #F1C40F !important;
+}
+
+.tpl-badge-primary {
+    background-color: #8E44AD !important;
+}
+
+.tpl-dropdown-content-external {
+    display: block;
+    overflow: hidden;
+    padding: 10px;
+    letter-spacing: .5px;
+    border-bottom: 1px solid #F1F4F7;
+}
+
+.tpl-dropdown-content-external a {
+    padding: 0 !important;
+    display: block !important;
+    float: right;
+    clear: none !important;
+}
+
+.tpl-dropdown-content-external h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 13px;
+    color: #96a5aa;
+    font-weight: normal;
+    /*display: inline-block;*/
+    float: left;
+}
+
+.tpl-dropdown-content-external h3 span {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.tpl-color-success {
+    color: #36c6d3;
+}
+
+.tpl-color-danger {
+    color: #ed6b75;
+}
+
+.tpl-color-warning {
+    color: #F1C40F;
+}
+
+.tpl-color-primary {
+    color: #8E44AD;
+}
+
+ul.am-dropdown-content > li > a:focus,
+ul.am-dropdown-content > li > a:hover {
+    background: none;
+}
+
+ul.am-dropdown-content > li > a {
+    color: #96a5aa;
+    padding: 12px 8px 12px 18px;
+    white-space: initial;
+    font-size: 12px;
+    display: table-cell;
+}
+
+.tpl-dropdown-ico-btn-size {
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    font-size: 8px;
+    color: #fff;
+}
+
+.tpl-dropdown-list-fr {
+    width: 30%;
+    display: table-cell;
+    font-size: 12px;
+    text-align: right;
+    line-height: initial;
+    vertical-align: middle;
+    padding-right: 20px;
+}
+
+ul.tpl-dropdown-content {
+    width: 260px;
+    padding: 8px;
+}
+
+ul.tpl-dropdown-content li > a.tpl-dropdown-content-message {
+    padding: 16px 12px;
+    display: block;
+    border-bottom: 1px solid #F1F4F7;
+}
+
+ul.tpl-dropdown-content li > a.tpl-dropdown-content-message:last-child {
+    border-bottom: none;
+}
+
+.tpl-dropdown-content-photo {
+    float: left;
+    margin: 0 6px 6px 0;
+}
+
+.tpl-dropdown-content-photo img {
+    height: 40px;
+    width: 40px;
+    -webkit-border-radius: 50% !important;
+    -moz-border-radius: 50% !important;
+    -ms-border-radius: 50% !important;
+    -o-border-radius: 50% !important;
+    border-radius: 50% !important;
+}
+
+.tpl-dropdown-content-subject {
+    display: block;
+    margin-left: 46px;
+}
+
+.tpl-dropdown-content-from {
+    font-size: 13px;
+    font-weight: 600;
+}
+
+.tpl-dropdown-content-time {
+    font-size: 12px;
+    font-weight: 400;
+    opacity: .5;
+    filter: alpha(opacity=50);
+    float: right;
+}
+
+.tpl-dropdown-content-font {
+    display: block !important;
+    font-size: 12px;
+    line-height: 22px;
+    margin-left: 46px;
+}
+
+.tpl-page-container {
+    margin: 0;
+    padding: 20px 20px 0;
+}
+
+.tpl-page-header-fixed {
+    margin-top: 50px;
+}
+
+
+.tpl-left-nav {
+    width: 235px;
+    float: left;
+    background: #fff;
+    border-radius: 6px;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    padding-bottom: 20px;
+}
+
+.tpl-left-nav-title {
+    height: 50px;
+    padding: 25px 15px 10px;
+    color: #5C9ACF;
+    font-size: 13px;
+    font-weight: 600;
+}
+
+.tpl-left-nav-list {
+    width: 235px;
+}
+
+.tpl-left-nav-item {}
+
+.tpl-left-nav-item .nav-link {
+    display: block;
+    position: relative;
+    margin: 1px 0 0;
+    border: 0;
+    padding: 12px 15px;
+    padding-top: 6px;
+    text-decoration: none;
+    color: #485a6a;
+    font-size: 14px;
+}
+
+.tpl-left-nav-item .nav-link span,
+.tpl-left-nav-sub-menu a span {
+    font-size: 14px;
+    font-weight: 400;
+    color: #485a6a;
+}
+
+.tpl-left-nav-item .nav-link i,
+.tpl-left-nav-sub-menu a i {
+    font-size: 20px;
+    position: relative;
+    text-shadow: none;
+    font-weight: 300;
+    top: 2px;
+    margin-left: 1px;
+    margin-right: 6px;
+    color: #a7bdcd;
+}
+
+.tpl-left-nav-item .nav-link:hover {
+    background: #f2f6f9;
+    color: #5b9bd1;
+    border-left: 3px solid #5C9ACF!important;
+    margin-left: -3px;
+    padding-left: 15px;
+}
+
+.tpl-left-nav-item .nav-link:hover i,
+.tpl-left-nav-sub-menu a:hover i {
+    color: #5b9bd1;
+}
+
+.tpl-left-nav-item .nav-link:hover span,
+.tpl-left-nav-sub-menu a:hover span {
+    color: #5b9bd1;
+}
+
+.tpl-left-nav-item .nav-link.active {
+    border-left: 3px solid #5C9ACF!important;
+    background: #f2f6f9;
+    margin-left: -3px;
+    padding-left: 15px;
+}
+
+.tpl-left-nav-item .nav-link.active span,
+.tpl-left-nav-item .nav-link.active i {
+    color: #5b9bd1;
+}
+
+.tpl-left-nav-sub-menu {
+    list-style: none;
+    display: none;
+    padding: 0;
+    margin: 0;
+}
+
+.tpl-header-nav-hover-ico {
+    color: #C0CDDC!important;
+    font-size: 19px!important;
+}
+
+.tpl-left-nav-more-ico {
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+    font-size: 16px!important;
+    top: 4px!important;
+}
+
+.tpl-left-nav-more-ico-rotate {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+}
+
+.tpl-left-nav-sub-menu a {
+    display: block;
+    margin: 0;
+    padding: 4px 14px 9px 30px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400;
+    background: 0 0;
+}
+
+.tpl-left-nav-sub-menu a:hover,
+.tpl-left-nav-sub-menu a.active {
+    color: #5b9bd1;
+    background: #f2f6f9!important;
+}
+
+.tpl-left-nav-sub-menu a.active i,
+.tpl-left-nav-sub-menu a.active span {
+    color: #5b9bd1;
+    background: #f2f6f9!important;
+}
+
+.tpl-left-nav-content-ico {
+    font-size: 14px!important;
+    position: relative;
+    top: 8px!important;
+    color: #ffbe40!important;
+}
+
+.tpl-left-nav-content {
+    background-color: #36c6d3;
+    border-radius: 1000px;
+    color: #fff!important;
+    padding: 0px 8px!important;
+    float: right;
+    position: relative;
+    font-style: normal;
+    font-family: "微软雅黑";
+    top: 10px!important;
+    font-size: 12px!important;
+}
+
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.row {
+    margin-left: -18px;
+    margin-right: -18px;
+    overflow: hidden;
+}
+
+.row-mb {
+    margin-bottom: 25px;
+}
+
+.tpl-content-wrapper-f {
+    padding-left: 0px;
+    padding-top: 0px;
+}
+
+.tpl-content-wrapper-hover {
+    padding-left: 0px;
+}
+
+.tpl-portlet-components {
+    border: 1px solid #e7ecf1;
+    padding: 12px 20px 15px;
+    background-color: #fff;
+    margin-top: 0;
+    margin-bottom: 25px;
+    overflow: hidden;
+}
+
+.tpl-portlet-components .portlet-title {
+    border-bottom: 1px solid #eef1f5;
+    padding: 0;
+    min-height: 48px;
+    margin-bottom: 10px;
+}
+
+.tpl-portlet-components .portlet-title .caption {
+    float: left;
+    display: inline-block;
+    font-size: 18px;
+    line-height: 18px;
+    color: #666;
+    padding: 10px 0;
+}
+
+.tpl-block {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+}
+
+.tpl-form-body {
+    padding: 20px;
+}
+
+.tpl-form-line {}
+
+.font-green {
+    color: #32c5d2!important;
+}
+
+.font-red {
+    color: #e7505a!important;
+}
+
+.bold {
+    font-weight: 700!important;
+}
+
+.tpl-amazeui-form .am-form-label {
+    color: #999;
+    font-weight: normal;
+    font-size: 14px;
+}
+
+.tpl-form-line-form .am-form-label .tpl-form-line-small-title {
+    color: #999;
+    font-size: 12px;
+}
+
+.tpl-form-line-form .am-form-label {
+    padding-top: 5px;
+    font-size: 16px;
+    color: #888;
+    font-weight: inherit;
+    text-align: right;
+}
+
+.tpl-form-line-form .am-form-group:after {
+    clear: both;
+}
+
+.tpl-form-line-form .am-form-group:after,
+.tpl-form-line-form .am-form-group:before {
+    content: " ";
+    display: table;
+}
+
+
+
+
+
 .clearfix::after {
    content: " ";
    display: block;
